# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  package-lock.json  pyproject.toml  questions.txt  setup.cfg
.github/workflows/: hexlet-check.yml  my-check.yml  tests.yml
files/: diff_file
gendiff/: __init__.py  dict_val_formatter.py  diff_func.py  make_diff.py  make_diff_flat.py  make_str.py  make_tree.py  parser.py  parser_args.py  parser_file.py  parser_files.py  stilish.py  stylish.py
gendiff/fixtures/: exp_flat  flat_f1.yaml
gendiff/formatters/: children_for_plain.py  flat.py  json.py  json_.py  make_str.py  plain.py  stylish.py
gendiff/formatters/fixtures/: flat_f2.json
gendiff/json_files/: file_out_2
gendiff/scripts/: gendiff.py
gendiff/yaml_files/: file1.yaml
new_venv/: pyvenv.cfg
tests/: test_generate_diff.py  test_json.py  test_plain.py  test_stylish.py  test_users.py  test_users_2.py
tests/fixtures/: exp_json  exp_json.txt  exp_yaml  f1_input.json  f2_input.json  f2_input.yaml  file_out  flat_f1.json  flat_f1.yml  nest_f1.json  test_users.py
