[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["ilia rassolov <iliarassolov@gmail.com>"]
license = "not"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
