[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["ilia rassolov <iliarassolov@gmail.com>"]
license = "not"
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^8.0.1"
